# uap

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  b.bat  b.sh  default.toml
.github/workflows/: Windows.yml  cmake.yml
assets/fontawesome/: IconsForkAwesome.h
demo/: CMakeLists.txt
demo/windows/: app.cpp  app.h  eventdispatch.cpp  eventdispatch.h  filelistmgr.cpp  filelistmgr.h  framework.h  genericframeimpl.cpp  genericframeimpl.h  settingframeimpl.cpp  settingframeimpl.h
doc/: api.md
include/: uap.h  uapapp.h  uapattributes.h  uapbase.h  uapcomponent.h  uapdefs.h  uapevent.h  uapfilesystem.h  uapimageengine.h  uaplog.h  uaplogtrace.h  uapresult.h  uaptoml.h  uaptypes.h  uapuiengine.h  uapunknown.h  uapuuid.h
source/: CMakeLists.txt
source/application/: CMakeLists.txt  applicationimpl.h  attributesimpl.cpp  attributesimpl.h  common.h  component.cpp  eventimpl.h  fileloggerimpl.cpp  fileloggerimpl.h  tomlimpl.cpp  tomlimpl.h
source/application/linux/: applicationimpl.cpp  logtraceimpl.cpp
source/application/windows/: applicationimpl.cpp  eventimpl.cpp  logtraceimpl.cpp  logtraceimpl.h
source/demo/: CMakeLists.txt
source/demo/linux/: main.cpp
source/demo/windows/: app.cpp  app.h  framework.h  layout.cpp  main.cpp
source/imageengine/: CMakeLists.txt
source/imageengine/libpng/: CMakeLists.txt  imageengineimpl.cpp  imagengineimpl.h
source/imageengine/wic/: CMakeLists.txt  comp.cpp  comp.h  dllmain.cpp  imageengineimpl.cpp  imageengineimpl.h
source/lib/: CMakeLists.txt  uap.cpp  uapheaders.h  uapinternal.h  uaplog.cpp  uaptrace.cpp
source/lib/be/linux/: CMakeLists.txt  uapbe.cpp  uapbe.h
source/lib/be/windows/: CMakeLists.txt  uapbe.cpp  uapbe.h  uapbeappimpl.cpp  uapbeappimpl.h  uapbeattributesimpl.cpp  uapbeattributesimpl.h  uapbedefs.h  uapbetrace.cpp  uaplogtraceimpl.cpp  uaplogtraceimpl.h  uaptomlimpl.cpp  uaptomlimpl.h
source/libuap/: CMakeLists.txt  uap.cpp  uapheaders.h  uapinternal.h  uapresults.cpp
source/uiengine/: CMakeLists.txt  common.h  comp.cpp  comp.h  component.cpp  dllmain.cpp  style.h  uidrawimpl.cpp  uidrawimpl.h  uienginebackenddx11impl.cpp  uienginebackenddx11impl.h  uienginebackenddx9impl.cpp  uienginebackenddx9impl.h  uiengineimpl.cpp  uiengineimpl.h  uifilebrowser.cpp  uifilebrowser.h  uifilebrowserwindowimpl.cpp  uifilebrowserwindowimpl.h  uiimagewindowimpl.cpp  uiimagewindowimpl.h  uilayoutimpldemo.cpp  uilayoutimpldemo.h  uilayoutimpldocking.cpp  uilayoutimpldocking.h  uilayoutimplsimple.cpp  uilayoutimplsimple.h  uilogwindowimpl.cpp  uilogwindowimpl.h  uimenubarimpl.cpp  uimenubarimpl.h  uimenuimpl.cpp  uimenuimpl.h  uipanelwindowimpl.cpp  uipanelwindowimpl.h  uistatusbarimpl.cpp  uistatusbarimpl.h  uitextureimpl.cpp  uitextureimpl.h  uitextureinspectorimpl.cpp  (+5 more)
test/: CMakeLists.txt  app.cpp  application.cpp  attributes.cpp  base.cpp  common.h  component.cpp  event.cpp  foo.h  foobar.h  foobarimpl.cpp  foobarimpl.h  headers.h  imageengine.cpp  log.cpp  logtrace.cpp  main.cpp  smartptr.cpp  sptr.cpp  toml.cpp  uap.cpp  uiengine.cpp
